--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,8 +39,13 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.1' // Updated to latest stable version
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.9.0' // Updated to latest stable version
-    implementation 'com.google.mlkit:barcode-scanning:17.0.3' // Replaced play-services-vision with ML Kit
+    implementation 'com.google.android.gms:play-services-vision:20.1.3' // Vision API
+    implementation 'com.google.mlkit:barcode-scanning:17.0.3'
+    implementation 'com.google.android.gms:play-services-base:18.2.1'
+    implementation 'com.google.android.gms:play-services-tasks:18.0.2'
+    implementation 'com.google.firebase:firebase-components:17.1.0'
+    implementation 'com.google.firebase:firebase-encoders:18.0.0'
+    implementation 'com.google.firebase:firebase-encoders-json:18.0.0'
+    implementation 'com.google.android.datatransport:transport-backend-cct:2.3.3'
 }
+
