--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,45 +1,34 @@
-group 'com.amolg.flutterbarcodescanner'
-version '1.0-SNAPSHOT'
-
 buildscript {
     repositories {
         google()
-        mavenCentral()
+        mavenCentral() // Replace deprecated jcenter() with mavenCentral()
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
-    }
-}
-
-rootProject.allprojects {
-    repositories {
-        google()
-        mavenCentral() // Ensure mavenCentral is used
+        classpath 'com.android.tools.build:gradle:7.4.2' // Ensure a compatible Gradle version
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 34 // Use the latest stable SDK version
+    namespace 'com.amolg.flutterbarcodescanner'
+    compileSdkVersion 34
 
     defaultConfig {
-        minSdkVersion 21 // Set a minimum version compatible with modern libraries
-        targetSdkVersion 34 // Match the compileSdkVersion
+        minSdkVersion 21
+        targetSdkVersion 34
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     lintOptions {
         disable 'InvalidPackage'
     }
-
-    // Namespace property as required by the latest Android Gradle Plugin
-    namespace 'com.amolg.flutterbarcodescanner'
 }
 
 dependencies {
-    // Dependencies for barcode scanning and Firebase ML Kit
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation 'com.google.mlkit:barcode-scanning:17.0.3'
     implementation 'com.google.android.gms:play-services-base:18.2.1'
@@ -48,9 +37,4 @@ dependencies {
     implementation 'com.google.firebase:firebase-encoders:18.0.0'
     implementation 'com.google.firebase:firebase-encoders-json:18.0.0'
     implementation 'com.google.android.datatransport:transport-backend-cct:2.3.3'
-
-    // AndroidX support libraries
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.9.0'
 }
