--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,17 +1,17 @@
 buildscript {
     repositories {
         google()
-        mavenCentral() // Replace deprecated jcenter() with mavenCentral()
+        mavenCentral() // Updated to use mavenCentral as jcenter is deprecated
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.android.tools.build:gradle:7.4.2' // Ensure this matches your Gradle version
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    namespace 'com.amolg.flutterbarcodescanner'
+    namespace 'com.amolg.flutterbarcodescanner' // Ensure namespace is defined for AGP 7.x+
     compileSdkVersion 34
 
     defaultConfig {
@@ -21,20 +21,38 @@ android {
     }
 
     lintOptions {
-        disable 'InvalidPackage'
+        disable 'InvalidPackage' // Disable invalid package warning
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8 // Ensure Java compatibility
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}' // Exclude unnecessary metadata files
+        }
     }
 }
 
 dependencies {
+    // Core dependencies
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.9.0'
+
+    // Google Play Services and ML Kit dependencies
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation 'com.google.mlkit:barcode-scanning:17.0.3'
     implementation 'com.google.android.gms:play-services-base:18.2.1'
     implementation 'com.google.android.gms:play-services-tasks:18.0.2'
+
+    // Firebase dependencies
     implementation 'com.google.firebase:firebase-components:17.1.0'
     implementation 'com.google.firebase:firebase-encoders:18.0.0'
     implementation 'com.google.firebase:firebase-encoders-json:18.0.0'
+
+    // Transport dependencies
     implementation 'com.google.android.datatransport:transport-backend-cct:2.3.3'
 }
